--- a/package.xml
+++ b/package.xml
@@ -23,11 +23,11 @@ support. Parallel requests are available for PHP 5 and greater.
   </maintainer>
   </maintainers>
  <release>
-  <version>1.4.1</version>
-  <date>2007-01-28</date>
+  <version>1.4.2</version>
+  <date>2007-02-11</date>
   <license>BSD, revised</license>
   <state>stable</state>
-  <notes>* Fixed crashes with incompletely initialiezed HttpMessages
+  <notes>* Fixed range requests for the first byte (&quot;0-0&quot;)
   </notes>
   <deps>
    <dep type="php" rel="ge" version="4.3"/>
